--- a/style/style.css
+++ b/style/style.css
@@ -246,6 +246,7 @@ header .icon {
 
 .footer .footer_header #ig_icon img {
   width: 15%;
+  height: 100%;
 }
 
 .footer .footer_navbar {
@@ -919,21 +920,41 @@ header .icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 10% 5%;
+  padding: 10%;
   height: 100vh;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-bottom: 1px solid gray;
 }
 
 .show-content figure img {
-  padding: 5%;
   height: 100%;
+  border: 5px solid white;
 }
 
 .show-content figure figcaption {
   text-align: center;
-  margin: auto 0;
-  font-size: 2vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 1.7vmax;
+  padding: 5%;
+  margin: 0 2%;
+  border-radius: 20px;
+}
+
+.show-content figure:nth-child(odd) {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
 }
 
 @media only screen and (max-width: 768px) {
@@ -948,9 +969,10 @@ header .icon {
   .show-content figure img {
     padding: 5%;
     width: 60%;
+    margin: auto 0;
   }
   .show-content figure figcaption {
-    font-size: 1vmax;
+    font-size: 2vmax;
   }
 }
 
