fixed safari version

--- a/style/pages/_contact.scss
+++ b/style/pages/_contact.scss
@@ -64,6 +64,7 @@
             border : 1px solid white;
             background-color: #201e1e;
             text-transform: capitalize;
+            cursor: pointer;
         }
     }  
 
