--- a/style/pages/_index.scss
+++ b/style/pages/_index.scss
@@ -60,8 +60,8 @@
 
                 figcaption{
                     text-align: center;
-                    // font-size: 2vmin;
                     font-size: 1.5vmax;
+                    animation: fadeIn 4s;
                 }
             }
         }
@@ -89,6 +89,16 @@
     }
 }
 
+
+@keyframes fadeIn{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+ 
 @media only screen and (max-width : 768px ){
 
     .main-div{
