--- a/style/pages/_shows.scss
+++ b/style/pages/_shows.scss
@@ -8,11 +8,13 @@
         display: flex;
         padding : 10%;
         height: 100vh;
+        max-width: 100%;
         justify-content: space-between;
         border-bottom: 1px solid gray;
 
         img{
-            height: 100%;
+            // height: 100%;
+            width: auto;
             border : 5px solid white;
         }
 
