--- a/style/pages/_contact.scss
+++ b/style/pages/_contact.scss
@@ -111,9 +111,52 @@
                 font-size : 3vmax;
             }
         }  
-    
     }
-    
-    
 
 }
+
+
+#alert-modal{
+    display: none;
+    position: absolute;
+    left: 30%;
+    top : 40%;
+    width: 40%;
+    height: 20%;
+    transition: all 2s ease-in;
+    padding : 5%;
+    background-color: #201e1e;
+    color: white;
+    border-radius: 25px;
+    border : 1px solid white;
+    // text-align: center;
+    animation: easeIn 1s;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+
+    #close{
+        font-size: 1.3vmax;
+        background-color: white;
+        color : gray;
+        border-radius: 20px;
+        padding : 2% 5%;
+    }
+}
+
+
+
+@-webkit-keyframes easeIn {
+    0% {
+      -webkit-transform: translateY(50%);
+    }
+  
+    50%{
+        -webkit-transform: translateY(-50%);
+    }
+    
+    100%{
+        -webkit-transform: translateY(0%);
+    }
+  
+   }
