--- a/style/pages/_contact.scss
+++ b/style/pages/_contact.scss
@@ -70,6 +70,33 @@
 
 }
 
+#alert-modal{
+    display: none;
+    position: absolute;
+    left: 30%;
+    top : 40%;
+    width: 40%;
+    height: 20%;
+    transition: all 2s ease-in;
+    padding : 5%;
+    background-color: black;
+    color: white;
+    border-radius: 25px;
+    border : 1px solid white;
+    animation: easeIn 1s;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+
+    #close{
+        font-size: 1.3vmax;
+        background-color: white;
+        color : gray;
+        border-radius: 20px;
+        padding : 2% 5%;
+    }
+}
+
 
 @media only screen and (max-width : 768px ){
 
@@ -113,37 +140,19 @@
         }  
     }
 
-}
-
-
-#alert-modal{
-    display: none;
-    position: absolute;
-    left: 30%;
-    top : 40%;
-    width: 40%;
-    height: 20%;
-    transition: all 2s ease-in;
-    padding : 5%;
-    background-color: #201e1e;
-    color: white;
-    border-radius: 25px;
-    border : 1px solid white;
-    // text-align: center;
-    animation: easeIn 1s;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
-
-    #close{
-        font-size: 1.3vmax;
-        background-color: white;
-        color : gray;
-        border-radius: 20px;
-        padding : 2% 5%;
+    #alert-modal{
+        height: 40%;
+        top : 130%;
+        // background-color: red;
+        // font-size: 1.2vmax;
+        #close{
+            font-size: 2vmax;
+        }
     }
-}
 
+  
+
+}
 
 
 @-webkit-keyframes easeIn {
