--- a/assets/style/components/home.scss
+++ b/assets/style/components/home.scss
@@ -31,22 +31,25 @@
 
     .home {
         header .right-container .links-box .link-social {
-            filter: invert(99%) sepia(1%) saturate(2328%) hue-rotate(135deg) brightness(118%) contrast(100%);
+            // filter: invert(99%) sepia(1%) saturate(2328%) hue-rotate(135deg) brightness(118%) contrast(100%);
+            // filter: invert(80%) sepia(100%) saturate(500%) hue-rotate(180deg);
+            filter: invert(75%) sepia(24%) saturate(748%) hue-rotate(164deg) brightness(95%) contrast(92%);
+
         }
     
         header{
             a{
-                color : white;
+                color :rgb(107, 195, 222);
             }
         }
 
         header .left-container nav ul li a {
-            color: white;
+            color :rgb(107, 195, 222);
         }
 
         
         header .right-container .city-name {
-            color :rgb(255, 255, 255);
+            color :rgb(107, 195, 222);
         }
 
     } 
