--- a/assets/style/components/about.css
+++ b/assets/style/components/about.css
@@ -1,91 +1,63 @@
 /*----------------------About----------------------*/
 .about header .right-container .links-box .link-social {
-  -webkit-filter: invert(60%) sepia(16%) saturate(1689%) hue-rotate(151deg) brightness(81%) contrast(93%);
-          filter: invert(60%) sepia(16%) saturate(1689%) hue-rotate(151deg) brightness(81%) contrast(93%);
+  filter: invert(60%) sepia(16%) saturate(1689%) hue-rotate(151deg) brightness(81%) contrast(93%);
 }
-
 .about header a {
-  color: #3291b69a;
+  color: rgba(50, 145, 182, 0.6039215686);
 }
-
 .about header .left-container nav ul li a {
-  color: #3291b69a;
+  color: rgba(50, 145, 182, 0.6039215686);
 }
-
 .about header .right-cont168b5aainer .city-name {
-  color: #224d5e9a;
+  color: rgba(34, 77, 94, 0.6039215686);
 }
 
 .about {
   min-height: 100vh;
 }
-
 .about .about-headshot {
   height: 80vh;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
-
 .about .about-headshot .img-container {
   width: 100vw;
   height: 100%;
   overflow: hidden;
+  background-image: url("/assets/img/headshots/about-headshot.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
-
-.about .about-headshot .img-container img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
 .about .about-content {
   min-height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
 }
-
 .about .about-content .inner {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  max-width: 1000px;
+  max-width: 80vw;
 }
-
 .about .about-content .left-section {
   max-height: 800px;
   padding: 20px;
   width: 50%;
 }
-
 .about .about-content .left-section .img-container {
   height: 100%;
   width: 100%;
 }
-
 .about .about-content .left-section .img-container img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 .about .about-content .right-section {
   width: 50%;
   height: 100%;
@@ -93,20 +65,12 @@
   line-height: 1.5em;
   padding: 20px;
 }
-
 .about .about-content .right-section .about-paragraph .paragraph-title {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
-
 .about .about-content .right-section .about-paragraph .paragraph-title h2 {
   text-align: center;
   padding: 20px 5px;
@@ -115,17 +79,13 @@
   font-size: 2em;
   letter-spacing: 3px;
 }
-
 .about .about-content .right-section .about-paragraph .paragraph-content {
   padding: 20px;
 }
 
 @media only screen and (max-width: 640px) {
   .about-content .inner {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .about-content .inner .left-section {
     margin-bottom: 50px;
@@ -133,5 +93,4 @@
   .about-content .inner .left-section, .about-content .inner .right-section {
     width: 100%;
   }
-}
-/*# sourceMappingURL=about.css.map */
+}/*# sourceMappingURL=about.css.map */
