--- a/assets/style/components/about.scss
+++ b/assets/style/components/about.scss
@@ -37,11 +37,11 @@
             width: 100vw;
             height: 100%;
             overflow: hidden;
-            img{
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
+            background-image: url("/assets/img/headshots/about-headshot.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center;
         }
     }
 
@@ -53,7 +53,7 @@
         overflow: hidden;
         .inner{
             display: flex;
-            max-width: 1000px;
+            max-width: 80vw;
         }
 
         
