--- a/assets/style/components/footer.css
+++ b/assets/style/components/footer.css
@@ -1,49 +1,31 @@
 /*----------------------footer----------------------*/
 footer {
   font-family: avenir-Book;
-  background-color: #236b6b;
+  background-color: rgb(35, 107, 107);
   text-align: center;
   height: 40vh;
   width: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  align-items: center;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  flex-direction: column;
+  justify-content: space-around;
   padding: 5% 0;
   color: white;
 }
-
 footer .intro {
   padding: 20px;
 }
-
 footer .intro-header {
   padding: 20px;
   font-size: 2em;
 }
-
 footer .links-box {
   z-index: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   width: 25%;
-  -webkit-filter: invert(99%) sepia(1%) saturate(2328%) hue-rotate(135deg) brightness(118%) contrast(100%);
-          filter: invert(99%) sepia(1%) saturate(2328%) hue-rotate(135deg) brightness(118%) contrast(100%);
+  filter: invert(99%) sepia(1%) saturate(2328%) hue-rotate(135deg) brightness(118%) contrast(100%);
 }
-
 footer .links-box .link-social {
   padding: 0 5px;
-}
-/*# sourceMappingURL=footer.css.map */
+}/*# sourceMappingURL=footer.css.map */
