--- a/assets/style/components/gallery.css
+++ b/assets/style/components/gallery.css
@@ -1,115 +1,66 @@
 .gallery header .right-container .links-box .link-social {
-  -webkit-filter: invert(60%) sepia(16%) saturate(1689%) hue-rotate(151deg) brightness(81%) contrast(93%);
-          filter: invert(60%) sepia(16%) saturate(1689%) hue-rotate(151deg) brightness(81%) contrast(93%);
+  filter: invert(99%) sepia(1%) saturate(2328%) hue-rotate(135deg) brightness(118%) contrast(100%);
 }
-
 .gallery header {
-  color: #3291b69a;
+  color: white;
 }
-
 .gallery header a {
-  color: #3291b69a;
+  color: white;
 }
-
 .gallery header .left-container nav ul li a {
-  color: #3291b69a;
-}
-
-.gallery header .right-container .city-name {
-  color: white !important;
+  color: white;
 }
 
 .gallery {
   min-height: 100vh;
 }
-
 .gallery .gallery-headshot {
   height: 80vh;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
-
 .gallery .gallery-headshot .img-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   width: 100vw;
   height: 100%;
   overflow: hidden;
+  background-image: url("/assets/img/editorial/editorial-5.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
-
-.gallery .gallery-headshot .img-container img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
 .gallery .gallery-content {
   margin-bottom: 20vh;
 }
-
-.gallery .gallery-content .title {
+.gallery .gallery-content .headshots .title, .gallery .gallery-content .editorial-shots .title, .gallery .gallery-content .production-shots .title {
   width: 100;
   height: 15vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
   padding: 2vh 0;
+  color: rgb(21, 72, 130);
 }
-
-.gallery .gallery-content .inner {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
+.gallery .gallery-content .headshots .inner, .gallery .gallery-content .editorial-shots .inner, .gallery .gallery-content .production-shots .inner {
+  height: 40v;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
-
-.gallery .gallery-content .inner .headshots img {
-  width: 25%;
-}
-
-.gallery .gallery-content .inner .editorials img {
-  width: 25%;
-}
-
-.gallery .gallery-content .inner .headshots, .gallery .gallery-content .inner .editorials {
-  padding: 0 80px;
-  width: 80vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
+.gallery .gallery-content .headshots .inner .top .bottom, .gallery .gallery-content .editorial-shots .inner .top .bottom, .gallery .gallery-content .production-shots .inner .top .bottom {
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  gap: 10px;
 }
-
-.gallery .gallery-content .inner .headshots img, .gallery .gallery-content .inner .editorials img {
-  height: 300px;
+.gallery .gallery-content .headshots .inner .flex-item, .gallery .gallery-content .editorial-shots .inner .flex-item, .gallery .gallery-content .production-shots .inner .flex-item {
+  width: 250px; /* Set a fixed width for the images */
+  height: 300px; /* Set a fixed height for the images */
+  flex: 4;
   -o-object-fit: cover;
-     object-fit: cover;
+     object-fit: cover; /* Ensure images cover the available space without distortion */
+  max-width: 100%;
 }
 
 @media only screen and (max-width: 640px) {
@@ -120,5 +71,4 @@
   .gallery .gallery-content .inner .headshots img, .gallery .gallery-content .inner .editorials img {
     width: 50%;
   }
-}
-/*# sourceMappingURL=gallery.css.map */
+}/*# sourceMappingURL=gallery.css.map */
