--- a/assets/style/components/gallery.scss
+++ b/assets/style/components/gallery.scss
@@ -3,25 +3,21 @@
 
 .gallery {
     header .right-container .links-box .link-social {
+        filter: invert(99%) sepia(1%) saturate(2328%) hue-rotate(135deg) brightness(118%) contrast(100%);
         // filter: invert(54%) sepia(12%) saturate(1178%) hue-rotate(127deg) brightness(93%) contrast(91%);
         // filter: invert(0%) sepia(6%) saturate(7500%) hue-rotate(328deg) brightness(103%) contrast(106%); 
-        filter : invert(60%) sepia(16%) saturate(1689%) hue-rotate(151deg) brightness(81%) contrast(93%);
+        // filter : invert(60%) sepia(16%) saturate(1689%) hue-rotate(151deg) brightness(81%) contrast(93%);
     }
 
     header{
-        color : #3291b69a;
+        color : white;
         a{
-            color : #3291b69a;
+            color : white;
         }
     }
 
     header .left-container nav ul li a {
-        color : #3291b69a;
-    }
-
-    
-    header .right-container .city-name {
-        color :white !important;
+        color : white;
     }
 
 } 
@@ -36,15 +32,14 @@
         justify-content: center;
         align-items: center;
         .img-container{
-            display: flex;
             width: 100vw;
             height: 100%;
             overflow: hidden;
-            img{
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
+            background-image: url("/assets/img/editorial/editorial-5.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center;
         }
     }
 
@@ -52,44 +47,39 @@
     .gallery-content{
         margin-bottom: 20vh;
 
-        .title{
-            width: 100;
-            height: 15vh;
-            display: flex;
-            justify-content: space-around;
-            flex-direction: column;
-            align-items: center;
-            padding : 2vh 0;
-        }
-
-        .inner{
-            width : 100%;
-            display: flex;
-            justify-content: center;
-            .headshots img{
-                width: 25%;
-            }
-            .editorials img{
-                width: 25%;
-            }
-            .headshots, .editorials{
-                padding : 0 80px;
-                // max-width: 1700px;
-                // min-width: 80vw;
-
-                width: 80vw;
+        .headshots, .editorial-shots, .production-shots {
+            .title{
+                width: 100;
+                height: 15vh;
                 display: flex;
-                justify-content: center;
-                // width: 80vh;
-                // overflow-x: scroll;
-                flex-wrap: wrap;
-                img{
-                    height: 300px;
-                    
-                    object-fit: cover;
-                }
+                justify-content: space-around;
+                flex-direction: column;
+                align-items: center;
+                padding : 2vh 0;
+                color: rgb(21, 72, 130);
+            }
+    
+            .inner{
+                height: 40v;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                .top .bottom{
+                    display: flex;
+                    gap: 10px; 
+                    } 
+                    .flex-item {
+                        width: 250px; /* Set a fixed width for the images */
+                        height: 300px; /* Set a fixed height for the images */
+                        flex: 4;
+                        object-fit: cover; /* Ensure images cover the available space without distortion */
+                        max-width: 100%;
+                    }
             }
         }
+
+
 
         
         
