--- a/assets/style/components/home.css
+++ b/assets/style/components/home.css
@@ -2,22 +2,14 @@
 .home .homepage-headshot {
   height: 100vh;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
-
 .home .homepage-headshot .img-container {
   width: 100vw;
   height: 100vh;
 }
-
 .home .homepage-headshot .img-container img {
   width: 100%;
   height: 100%;
@@ -27,19 +19,14 @@
 
 /* ----------------- Header specific style for HOME -------------- */
 .home header .right-container .links-box .link-social {
-  -webkit-filter: invert(99%) sepia(1%) saturate(2328%) hue-rotate(135deg) brightness(118%) contrast(100%);
-          filter: invert(99%) sepia(1%) saturate(2328%) hue-rotate(135deg) brightness(118%) contrast(100%);
+  filter: invert(75%) sepia(24%) saturate(748%) hue-rotate(164deg) brightness(95%) contrast(92%);
 }
-
 .home header a {
-  color: white;
+  color: rgb(107, 195, 222);
 }
-
 .home header .left-container nav ul li a {
-  color: white;
+  color: rgb(107, 195, 222);
 }
-
 .home header .right-container .city-name {
-  color: white;
-}
-/*# sourceMappingURL=home.css.map */
+  color: rgb(107, 195, 222);
+}/*# sourceMappingURL=home.css.map */
