--- a/assets/style/components/media.css
+++ b/assets/style/components/media.css
@@ -1,78 +1,96 @@
+.media header {
+  width: 100%;
+  position: relative;
+  color: rgba(255, 255, 255, 0.825);
+  background-color: rgb(40, 87, 174);
+}
 .media header a {
-  color: black;
+  color: rgba(255, 255, 255, 0.825);
+}
+.media header .left-container nav ul li a {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.825);
+}
+.media header .right-container .links-box .link-social {
+  filter: invert(100%) brightness(100%);
+  opacity: 0.825;
 }
 
 .media {
   height: 100vh;
 }
-
 .media .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   margin-bottom: 10vh;
 }
-
-.media .container .inner {
-  margin-top: 20vh;
+.media .container .top {
+  width: 100vw;
+}
+.media .container .top .title {
+  text-align: center;
+  width: 100%;
+  padding: 5vh;
+  background-color: rgb(40, 87, 174);
+  color: white;
+}
+.media .container .top .title h2 {
+  letter-spacing: 0.3em;
+  font-size: 3em;
+}
+.media .container .top .subtitle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 3em;
+  letter-spacing: 0.3em;
+}
+.media .container .wrapper-1 {
   width: 80%;
   max-width: 1500px;
 }
-
-.media .container .inner .title {
-  text-align: center;
-  width: 100%;
-  margin-top: 50px;
-}
-
-.media .container .inner .title hr {
-  margin: 20px auto;
-  margin-bottom: 20px;
-  max-width: 1500px;
-  border: 1px #71724d solid;
-}
-
-.media .container .inner .title h2 {
-  font-size: 4em;
-  letter-spacing: 0.3em;
-}
-
-.media .container .inner .title h3 {
-  font-size: 2em;
-  letter-spacing: 0.2em;
-}
-
-.media .container .inner .title span {
-  margin-bottom: 100px;
-}
-
-.media .container .inner .main {
-  padding-top: 100px;
+.media .container .wrapper-1 .main {
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
-
-.media .container .inner .main .vid-container {
+.media .container .wrapper-1 .main .vid-container {
   height: 60vh;
   width: 50vw;
 }
-/*# sourceMappingURL=media.css.map */
+.media .container .wrapper-2 {
+  padding: 2em;
+  width: 80%;
+  max-width: 1500px;
+}
+.media .container .wrapper-2 .clips-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 3em;
+  letter-spacing: 0.3em;
+}
+.media .container .wrapper-2 .clips {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+  gap: 10px;
+}
+.media .container .wrapper-2 .clips .clip-item {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.media .container .wrapper-2 .clips .clip-item iframe, .media .container .wrapper-2 .clips .clip-item p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1em;
+}/*# sourceMappingURL=media.css.map */
