--- a/assets/style/components/navbar.css
+++ b/assets/style/components/navbar.css
@@ -1,97 +1,75 @@
 header {
   position: absolute;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
-
 header .header-inner {
   width: 100%;
   max-width: 1500px;
-  color: black;
   font-size: 19px;
   letter-spacing: 1.2em;
   margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
-
 header .header-inner .left-container {
   margin-left: 8%;
 }
-
 header .header-inner .left-container .header-name {
   font-family: literal;
   font-style: normal;
   font-size: 3.5em;
-  letter-spacing: -.05em;
+  letter-spacing: 0.05em;
   text-transform: uppercase;
 }
-
 header .header-inner .left-container .header-name a {
   text-decoration: none;
 }
-
 header .header-inner .left-container nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   list-style-type: none;
   width: auto;
-  font-size: .8em;
+  font-size: 0.8em;
   text-transform: uppercase;
-  letter-spacing: .05em;
+  letter-spacing: 0.09em;
   font-weight: 300;
 }
-
 header .header-inner .left-container nav ul li {
   text-decoration: none;
   padding: 0 5px;
 }
-
 header .header-inner .left-container nav ul li a {
   text-decoration: none;
   color: black;
 }
-
 header .header-inner .left-container nav ul li a:hover {
-  color: #6db9b3;
+  color: rgb(109, 185, 179);
 }
-
 header .header-inner .right-container {
   margin-right: 8%;
   padding: 1% 0;
   width: 20%;
   min-width: 300px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  flex-direction: column;
+  justify-content: space-around;
 }
-
+header .header-inner .right-container .city-name {
+  font-size: 0.8em;
+  letter-spacing: 0.3em;
+  line-height: 1em;
+  padding: 0 10px;
+  text-align: center;
+  font-weight: 700;
+  width: 100%;
+}
 header .header-inner .right-container .links-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   padding: 5px 20px;
 }
-
 header .header-inner .right-container .links-box .img-outer {
   border-radius: 50%;
   padding: 8px;
@@ -100,19 +78,9 @@ header .header-inner .right-container .links-box .img-outer {
   display: inline-block;
   font-size: 21px;
 }
-
 header .header-inner .right-container .links-box .img-outer img {
   min-width: 25;
   min-height: 30;
-}
-
-header .header-inner .right-container .city-name {
-  font-size: 21px;
-  letter-spacing: .3em;
-  line-height: 1em;
-  padding: 0 10px;
-  text-align: center;
-  font-weight: 700;
 }
 
 .header-mobile, .nav-button, .nav-mobile {
@@ -120,14 +88,6 @@ header .header-inner .right-container .city-name {
 }
 
 @media only screen and (max-width: 640px) {
-  @-webkit-keyframes slide-in {
-    from {
-      margin-left: -100vw;
-    }
-    to {
-      margin-left: 0;
-    }
-  }
   @keyframes slide-in {
     from {
       margin-left: -100vw;
@@ -146,21 +106,15 @@ header .header-inner .right-container .city-name {
     left: 0;
     height: 10vh;
     width: 100vw;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
   }
   .header-mobile a {
     text-decoration: none;
     color: white;
     font-size: 2em;
-    letter-spacing: .2em;
+    letter-spacing: 0.2em;
   }
   .nav-button, .header-mobile {
     background-color: rgba(13, 13, 20, 0.8);
@@ -172,15 +126,9 @@ header .header-inner .right-container .city-name {
     left: 0;
     height: 10vh;
     width: 100vw;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
   }
   .nav-button img {
@@ -189,10 +137,8 @@ header .header-inner .right-container .city-name {
   }
   .nav-mobile {
     position: fixed;
-    -webkit-animation-name: slide-in;
-            animation-name: slide-in;
-    -webkit-animation-duration: 2s;
-            animation-duration: 2s;
+    animation-name: slide-in;
+    animation-duration: 2s;
     height: 100vh;
     width: 100vw;
     z-index: 1;
@@ -204,15 +150,9 @@ header .header-inner .right-container .city-name {
   }
   .nav-mobile .navbar-mob-options ul {
     height: 60vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    justify-content: space-around;
+    flex-direction: column;
     padding: 30px;
     list-style-type: none;
   }
@@ -221,7 +161,7 @@ header .header-inner .right-container .city-name {
     text-transform: uppercase;
     text-decoration: none;
     font-size: 2em;
-    letter-spacing: .2em;
+    letter-spacing: 0.2em;
   }
   .nav-mobile .close-sec {
     width: 10vw;
@@ -229,15 +169,9 @@ header .header-inner .right-container .city-name {
   }
   .nav-mobile .close-sec .close-btn-wrapper {
     height: 10vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     background-color: rgba(16, 85, 90, 0.8);
     cursor: pointer;
   }
@@ -245,5 +179,4 @@ header .header-inner .right-container .city-name {
     height: 50%;
     width: 50%;
   }
-}
-/*# sourceMappingURL=navbar.css.map */
+}/*# sourceMappingURL=navbar.css.map */
