--- a/assets/style/components/navbar.scss
+++ b/assets/style/components/navbar.scss
@@ -1,12 +1,13 @@
 header{
+
     position: absolute;
     width: 100%;
     display: flex;
     justify-content: space-between;
+
     .header-inner{
         width: 100%;
         max-width: 1500px;
-        color : black;
         font-size: 19px;
         letter-spacing: 1.2em;
         margin : 0 auto;
@@ -19,7 +20,7 @@ header{
                 // font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
                 font-style: normal;
                 font-size: 3.5em;
-                letter-spacing: -.05em;
+                letter-spacing: .05em;
                 text-transform: uppercase;
                 a{
                     text-decoration: none;
@@ -33,7 +34,7 @@ header{
                     width: auto;
                     font-size: .8em;
                     text-transform: uppercase;
-                    letter-spacing: .05em;
+                    letter-spacing: .09em;
                     font-weight: 300;
                     li {
                         text-decoration: none;
@@ -51,7 +52,6 @@ header{
         }
     
         .right-container{
-            // border : 1px solid red;
             margin-right : 8%;
             padding : 1% 0;
             width: 20%;
@@ -59,6 +59,15 @@ header{
             display: flex;
             flex-direction: column;
             justify-content: space-around;
+            .city-name{
+                font-size : .8em;
+                letter-spacing: .3em;
+                line-height: 1em;
+                padding : 0 10px;
+                text-align: center;
+                font-weight: 700;
+                width: 100%;
+            }
             .links-box{
                 display: flex;
                 width: 100%;
@@ -76,14 +85,6 @@ header{
                         min-height: 30;
                     }
                 }
-            }
-            .city-name{
-                font-size : 21px;
-                letter-spacing: .3em;
-                line-height: 1em;
-                padding : 0 10px;
-                text-align: center;
-                font-weight: 700;
             }
         
         }
