--- a/assets/style/components/resume.css
+++ b/assets/style/components/resume.css
@@ -2,91 +2,91 @@
 .resume header {
   width: 100%;
   position: relative;
+  color: rgba(255, 255, 255, 0.825);
+  background-color: rgb(40, 87, 174);
 }
-
 .resume header a {
-  color: black;
+  color: rgba(255, 255, 255, 0.825);
 }
-
 .resume header .left-container nav ul li a {
   text-decoration: none;
-  color: black;
+  color: rgba(255, 255, 255, 0.825);
+}
+.resume header .right-container .links-box .link-social {
+  filter: invert(100%) brightness(100%);
+  opacity: 0.825;
 }
 
 .resume {
   min-height: 100vh;
   width: 100%;
 }
-
 .resume .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
-
+.resume .container .top {
+  width: 100vw;
+}
+.resume .container .top .title {
+  text-align: center;
+  width: 100%;
+  padding: 5vh;
+  background-color: rgb(40, 87, 174);
+  color: white;
+}
+.resume .container .top .title h2 {
+  letter-spacing: 0.3em;
+  font-size: 4em;
+}
+.resume .container .top .subtitle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+.resume .container .top .subtitle .social-links-tray {
+  padding: 20px;
+  display: flex;
+}
+.resume .container .top .subtitle .social-links-tray .socials-wrapper-item {
+  display: flex;
+  align-items: center;
+}
+.resume .container .top .subtitle .social-links-tray .socials-wrapper-item a {
+  height: 4em;
+  margin: 1em;
+  min-width: 200px;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+}
+.resume .container .top .subtitle .social-links-tray .socials-wrapper-item img {
+  height: 100%;
+  padding: 0.5em;
+}
 .resume .container .inner {
   width: 80%;
   max-width: 1500px;
 }
-
-.resume .container .inner .title {
-  text-align: center;
-  width: 100%;
-  margin-top: 50px;
-}
-
-.resume .container .inner .title hr {
-  margin: 30px auto;
-  margin-bottom: 30px;
-  max-width: 1500px;
-  border: 1px #71724d solid;
-}
-
-.resume .container .inner .title h2 {
-  letter-spacing: 0.3em;
-  font-size: 4em;
-}
-
-.resume .container .inner .title span {
-  margin-bottom: 100px;
-}
-
 .resume .container .inner .main {
-  margin-top: 5vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  margin: 5vh;
   display: flex;
 }
-
 .resume .container .inner .main .left-div, .resume .container .inner .main .right-div {
   width: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  justify-content: center;
+  flex-direction: column;
 }
-
 .resume .container .inner .main .img-container {
   height: 110vh;
   width: 100%;
 }
-
 .resume .container .inner .main .img-container img {
   height: auto;
   width: 100%;
@@ -94,93 +94,37 @@
      object-fit: cover;
   max-height: 100vh;
 }
-
 .resume .container .inner .main .button-container {
   padding-top: 20px;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
-
 .resume .container .inner .main .button {
   padding: 20px;
   letter-spacing: 0.15em;
-  background-color: rgba(190, 70, 33, 0.685);
+  background-color: rgb(40, 87, 174);
   color: white;
   cursor: pointer;
   border: none;
   text-decoration: none;
 }
 
-.resume .under-main {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 100px 0;
-}
-
-.resume .under-main .social-links {
-  margin-bottom: 5vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.resume .under-main .social-links img {
-  width: 200px;
-  padding: 20px;
-}
-
 @media only screen and (max-width: 640px) {
   .resume .container .inner .main {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
+    flex-direction: column-reverse;
   }
   .resume .container .inner .main .left-div, .resume .container .inner .main .right-div {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    justify-content: space-evenly;
     width: 100%;
   }
   .resume .container .inner .main .left-div .img-container, .resume .container .inner .main .right-div .img-container {
     height: auto;
   }
   .resume .container .inner .main .left-div .button-container, .resume .container .inner .main .right-div .button-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
   }
-}
-/*# sourceMappingURL=resume.css.map */
+}/*# sourceMappingURL=resume.css.map */
