--- a/assets/style/components/resume.scss
+++ b/assets/style/components/resume.scss
@@ -1,15 +1,29 @@
   /*----------------------Resume----------------------*/
   .resume{
     header {
+
         width: 100%;
         position: relative;
+        color: rgba(255, 255, 255, 0.825);
+        background-color: rgb(40, 87, 174);
+
         a {
-            color : black;
+            color: rgba(255, 255, 255, 0.825);
+
         }
         .left-container nav ul li a {
             text-decoration: none;
-            color : black;
+            color: rgba(255, 255, 255, 0.825);
+
         }
+
+        .right-container .links-box .link-social {
+            // filter: invert(99%) sepia(1%) saturate(2328%) hue-rotate(135deg) brightness(118%) contrast(100%);
+            // filter: invert(80%) sepia(100%) saturate(500%) hue-rotate(180deg);
+            filter: invert(100%) brightness(100%);
+            opacity: 0.825;
+        }
+
     }
   }
 
@@ -22,34 +36,62 @@
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        .inner{
-            width: 80%;
-            max-width: 1500px;
+
+        .top{
+            width: 100vw;
 
             .title{
                 text-align: center;
                 width: 100%;
-                margin-top : 50px;
-
-                hr{
-                    margin : 30px auto;
-                    margin-bottom: 30px;
-                    max-width: 1500px;
-                    border : 1px rgb(113, 114, 77) solid;
-                }
+                padding: 5vh;
+                background-color: rgb(40, 87, 174);
+                color: white;
 
                 h2{
                     letter-spacing: 0.3em;
                     font-size: 4em;
                 }
-                
-                span{
-                    margin-bottom : 100px;
+            }
+
+            .subtitle{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                padding: 20px;
+                .social-links-tray{
+                    padding: 20px;
+                    display: flex;
+                    .socials-wrapper-item{
+                        // border : 1px solid black;
+                        display: flex;
+                        align-items: center;
+                        // height: 2em;
+                        a{
+                            height: 4em;
+                            margin : 1em;
+                            min-width: 200px;
+                            border : 1px solid black;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            border-radius: 5px;
+                        } 
+                        img{
+                            height: 100%;
+                            padding : .5em;
+                        }
+                    }
                 }
             }
 
+        }
+
+        .inner{
+            width: 80%;
+            max-width: 1500px;
+
             .main{
-                margin-top : 5vh;
+                margin : 5vh;
                 display : flex;
 
                 .left-div, .right-div{
@@ -82,7 +124,7 @@
                 .button{
                     padding : 20px;
                     letter-spacing: 0.15em;
-                    background-color: rgba(190, 70, 33, 0.685);
+                    background-color: rgb(40, 87, 174);
                     color : white;
                     cursor: pointer;
                     border : none;
@@ -94,25 +136,6 @@
 
     }
 
-    .under-main{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 100px 0;
-        .social-links{
-            margin-bottom: 5vh;
-            // border : 1px blue solid;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            img{
-                width: 200px;
-                padding : 20px;
-            }
-        }
-    }
 }
 
 @media only screen and (max-width: 640px) {
